# NadirClaw

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: comparison.md  setup-webhook.md
nadirclaw/: __init__.py  admin_ui.py  auth.py  classifier.py  cli.py  credentials.py  encoder.py  models.json  oauth.py  report.py  routing.py  server.py  settings.py  setup.py
tests/: test_credentials.py  test_routing.py  test_server.py  test_setup.py
